--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                 <p>A father and daughter operated business. We make buttefly ornaments from real butterflies.</p>
                 <p>Place them in arrangements, potted plants, or where ever your heart desires.</p>
                 <p>Est. 2024</p>
-                <img src="images/top_pic.JPEG" alt="Photo of butterfly ornament." class="front-photo">
+                <img src="top_pic.JPEG" alt="Photo of butterfly ornament." class="front-photo">
             </div>
 
             <div id="aboutus" class="textbox">
                 <h1>About Us</h1>
-                <img src="images/plymouth_photo.JPEG" alt="Photo of founder and junior-direcor." class="resized-photo">
+                <img src="plymouth_photo.JPEG" alt="Photo of founder and junior-direcor." class="resized-photo">
                 <p>Started by father and daughter, business partners, and best friends, Fantasia Butterfly Company metamorphosizsed from what was just an idea.
                    We operate out of the coastal peninusula of Cape Cod, observing sunsets in our free time. 
                    We specialize in the art of spreading and preserving visually captivating specimens, transforming mother
@@ -51,7 +51,7 @@
 
             <div id="onlineshop" class="textbox">
                 <h1>Online Shop</h1>
-                <img src="images/onlinestore2.JPEG" alt="Butterfly Display" class="onlineshop">
+                <img src="onlinestore2.JPEG" alt="Butterfly Display" class="onlineshop">
                 <p>You can purchase butterflies from our Etsy page.</p>
                 <a href="https://www.fantasiabutterflyco.etsy.com" class="button">Visit Online Store</a>
             </div>
