--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h1>Fantasia Butterfly Co.</h1>
                 <h2>Cape Cod, MA</h2>
                 <h3>Making fantasies, reality.</h3>
-                <p>A father and daughter operated business. We make buttefly ornaments from real butterflies.</p>
+                <p>A father and daughter operated business. We make ornaments from real butterflies.</p>
                 <p>Place them in arrangements, potted plants, or where ever your heart desires.</p>
                 <p>Est. 2024</p>
                 <img src="top_pic.JPEG" alt="Photo of butterfly ornament." class="front-photo">
@@ -88,9 +88,9 @@
             <div id="FAQ" class="textbox">
                 <h1>FAQ</h1>
                 <p class="question">How do you source your butterflies?</p>
-                <p class="answer">We get our butterflies from over seas. Families farm them so none are taken from their environment.</p>
+                <p class="answer">We get our butterflies from overseas. Families farm them so none are taken from their environment.</p>
                 <p class="question">How are the butteflies euthanized?</p>
-                <p class="answer">They are frozen, which causes them to close, we rehydrated them and spread them, then they are air dried.</p>
+                <p class="answer">They are frozen, which causes them to close, we rehydrate them and spread them, then they are air-dried.</p>
                 <p class="question">How long do they last?</p>
                 <p class="answer">They can last indefinitely, depending on how well you take care of them. For the longest life, keep away from humidity, drafts and direct sunglight.</p>
                 <p class="question">Do you accept returns?</p>
