--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <p>Started by father and daughter, business partners, and best friends, Fantasia Butterfly Company metamorphosizsed from what was just an idea.
                    We operate out of the coastal peninusula of Cape Cod, observing sunsets in our free time. 
                    We specialize in the art of spreading and preserving visually captivating specimens, transforming mother
-                   nature's beauty into timeless displays and bringing them into your living space. Thank you for supporting us.</p>
+                   nature's beauty into timeless displays and bringing them into your home. Thank you for supporting us.</p>
             </div> 
 
             <div id="onlineshop" class="textbox">
