--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h1>Online Shop</h1>
                 <img src="onlinestore2.JPEG" alt="Butterfly Display" class="onlineshop">
                 <p>You can purchase butterflies from our Etsy page.</p>
-                <a href="https://www.fantasiabutterflyco.etsy.com" class="button">Visit Online Store</a>
+                <a href="https://www.fantasiabutterfly.etsy.com" class="button">Visit Online Store</a>
             </div>
 
             <div id="gallery" class="textbox">
