--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p>Place them in arrangements, potted plants, or where ever your heart desires.</p>
                 <p>Est. 2024</p>
                 <div class="container">
-                <img src="images/top_pic.JPEG" alt="Photo of butterfly ornament." class="front-photo">
+                <img src="top_pic.JPEG" alt="Photo of butterfly ornament." class="front-photo">
                 </div>
             </div>
                 
@@ -65,7 +65,7 @@
                 <img src="onlinestore2.JPEG" alt="Butterfly Display" class="onlineshop">
                 </div>
                 <p>You can purchase butterflies from our Etsy page.</p>
-                <a href="https://www.fantasiabutterflyco.etsy.com" class="button">Visit Online Store</a>
+                <a href="https://www.fantasiabutterfly.etsy.com" class="button">Visit Online Store</a>
             </div>
 
             <div id="gallery" class="textbox">
