--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p>Place them in arrangements, potted plants, or where ever your heart desires.</p>
                 <p>Est. 2024</p>
                 <div class="container">
-                <img src="images/top_pic.JPEG" alt="Photo of butterfly ornament." class="front-photo">
+                <img src="top_pic.JPEG" alt="Photo of butterfly ornament." class="front-photo">
                 </div>
             </div>
                 
