--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
             <div id="onlineshop" class="textbox">
                 <h1>Online Shop</h1>
                 <div class="container">
-                <img src="images/onlinestore2.JPEG" alt="Butterfly Display" class="onlineshop">
+                <img src="onlinestore2.JPEG" alt="Butterfly Display" class="onlineshop">
                 </div>
                 <p>You can purchase butterflies from our Etsy page.</p>
-                <a href="https://www.fantasiabutterflyco.etsy.com" class="button">Visit Online Store</a>
+                <a href="https://www.fantasiabutterfly.etsy.com" class="button">Visit Online Store</a>
             </div>
 
             <div id="gallery" class="textbox">
