--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <div id="butterfly-container">
-        <img id="butterfly" src="images/butterfly.png" alt="Butterfly">
-        <img id="gold_butterfly" src="images/gold_butterfly.png" alt="Gold_Butterfly">
-        <img id="aqua_butterfly" src="images/aqua_butterfly.png" alt="Aqua_Butterfly">
-        <img id="green_butterfly" src="images/green_butterfly.png" alt="Green_Butterfly">
-        <img id="sunset_butterfly" src="images/sunset_butterfly.png" alt="Sunset_Butterfly">
-        <img id="purple_butterfly" src="images/purple_butterfly.png" alt="Purple_Butterfly">
-        <img id="atlas_butterfly" src="images/atlas_butterfly.png" alt="Atlas_Butterfly">
-        <img id="forest_moth" src="images/forest_moth.png" alt="Forest_Moth">
+        <img id="butterfly" src="butterfly.png" alt="Butterfly">
+        <img id="gold_butterfly" src="gold_butterfly.png" alt="Gold_Butterfly">
+        <img id="aqua_butterfly" src="aqua_butterfly.png" alt="Aqua_Butterfly">
+        <img id="green_butterfly" src="green_butterfly.png" alt="Green_Butterfly">
+        <img id="sunset_butterfly" src="sunset_butterfly.png" alt="Sunset_Butterfly">
+        <img id="purple_butterfly" src="purple_butterfly.png" alt="Purple_Butterfly">
+        <img id="atlas_butterfly" src="atlas_butterfly.png" alt="Atlas_Butterfly">
+        <img id="forest_moth" src="forest_moth.png" alt="Forest_Moth">
     </div>
     <div class="container">
         <nav class="sidebar">
@@ -44,14 +44,14 @@
                 <p>Place them in arrangements, potted plants, or where ever your heart desires.</p>
                 <p>Est. 2024</p>
                 <div class="container">
-                <img src="images/top_pic.JPEG" alt="Photo of butterfly ornament." class="front-photo">
+                <img src="top_pic.JPEG" alt="Photo of butterfly ornament." class="front-photo">
                 </div>
             </div>
                 
             <div id="aboutus" class="textbox">
                 <h1>About Us</h1>
                 <div class="container">
-                <img src="images/plymouth_photo.JPEG" alt="Photo of founder and junior-direcor." class="resized-photo">
+                <img src="plymouth_photo.JPEG" alt="Photo of founder and junior-direcor." class="resized-photo">
                 </div>
                 <p>Started by father and daughter, business partners, and best friends, Fantasia Butterfly Company metamorphosizsed from what was just an idea.
                    We operate out of the coastal peninusula of Cape Cod, observing sunsets in our free time. 
@@ -62,10 +62,10 @@
             <div id="onlineshop" class="textbox">
                 <h1>Online Shop</h1>
                 <div class="container">
-                <img src="images/onlinestore2.JPEG" alt="Butterfly Display" class="onlineshop">
+                <img src="onlinestore2.JPEG" alt="Butterfly Display" class="onlineshop">
                 </div>
                 <p>You can purchase butterflies from our Etsy page.</p>
-                <a href="https://www.fantasiabutterflyco.etsy.com" class="button">Visit Online Store</a>
+                <a href="https://www.fantasiabutterfly.etsy.com" class="button">Visit Online Store</a>
             </div>
 
             <div id="gallery" class="textbox">
@@ -74,18 +74,18 @@
                 <div class="slideshow-wrapper">
                     <button class="prev" onclick="scrollGallery(-1)">&#10094;</button>
                     <div class="scroll-container">
-                      <img src="images/gallery4.JPEG" class="gallery-item">
-                      <img src="images/gallery5.JPEG" class="gallery-item">
-                      <img src="images/gallery6.JPEG" class="gallery-item">
-                      <img src="images/gallery7.JPEG" class="gallery-item">
-                      <img src="images/gallery1.JPEG" class="gallery-item">
-                      <img src="images/hidden_face.JPEG" class="gallery-item">
-                      <img src="images/display.JPEG" class="gallery-item">
-                      <img src="images/gallery2.JPEG" class="gallery-item">
-                      <img src="images/simon.JPEG" class="gallery-item">
-                      <img src="images/simon2.JPEG" class="gallery-item">
-                      <img src="images/potted.JPEG" class="gallery-item">
-                      <img src="images/gallery3.JPEG" class="gallery-item">
+                      <img src="gallery4.JPEG" class="gallery-item">
+                      <img src="gallery5.JPEG" class="gallery-item">
+                      <img src="gallery6.JPEG" class="gallery-item">
+                      <img src="gallery7.JPEG" class="gallery-item">
+                      <img src="gallery1.JPEG" class="gallery-item">
+                      <img src="hidden_face.JPEG" class="gallery-item">
+                      <img src="display.JPEG" class="gallery-item">
+                      <img src="gallery2.JPEG" class="gallery-item">
+                      <img src="simon.JPEG" class="gallery-item">
+                      <img src="simon2.JPEG" class="gallery-item">
+                      <img src="potted.JPEG" class="gallery-item">
+                      <img src="gallery3.JPEG" class="gallery-item">
                     </div>
                     <button class="next" onclick="scrollGallery(1)">&#10095;</button>
                 </div>
