--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <img src="onlinestore2.JPEG" alt="Butterfly Display" class="onlineshop">
                 </div>
                 <p>You can purchase butterflies from our Etsy page.</p>
-                <a href="https://www.fantasiabutterfly.etsy.com" target="_blank" rel="noopener noreferrer" class="button">Visit Online Store</a>
+                <a href="https://www.etsy.com/shop/fantasiabutterfly" target="_blank" rel="noopener noreferrer" class="button">Visit Online Store</a>
             </div>
 
             <div id="gallery" class="textbox">
