--- a/index.html
+++ b/index.html
@@ -74,18 +74,21 @@
                 <div class="slideshow-wrapper">
                     <button class="prev" onclick="scrollGallery(-1)">&#10094;</button>
                     <div class="scroll-container">
+                      <img src="close_salt.JPEG" class="gallery-item">
+                      <img src="close.JPEG" class="gallery-item">
                       <img src="gallery4.JPEG" class="gallery-item">
                       <img src="gallery5.JPEG" class="gallery-item">
                       <img src="gallery6.JPEG" class="gallery-item">
                       <img src="gallery7.JPEG" class="gallery-item">
                       <img src="gallery1.JPEG" class="gallery-item">
                       <img src="hidden_face.JPEG" class="gallery-item">
-                      <img src="display.JPEG" class="gallery-item">
+                      <img src="nice.JPEG" class="gallery-item">
                       <img src="gallery2.JPEG" class="gallery-item">
                       <img src="simon.JPEG" class="gallery-item">
                       <img src="simon2.JPEG" class="gallery-item">
                       <img src="potted.JPEG" class="gallery-item">
-                      <img src="gallery3.JPEG" class="gallery-item">
+                      <img src="salty.JPEG" class="gallery-item">
+                      <img src="studio.JPEG" class="gallery-item">
                     </div>
                     <button class="next" onclick="scrollGallery(1)">&#10095;</button>
                 </div>
