--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fantasia Butterfly Co.</title>
     <link rel="stylesheet" href="mobile_styles.css">
+    <link rel="icon" type="image/png" href="IMG_0253.PNG">
 </head>
 <body>
     <div id="butterfly-container">
