--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fantasia Butterfly Co.</title>
     <link rel="stylesheet" href="mobile_styles.css">
-    <link rel="icon" type="image/png" href="IMG_0253.PNG">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="apple-touch-icon" href="favicon.png">
 </head>
 <body>
     <div id="butterfly-container">
