--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fantasia Butterfly Co.</title>
     <link rel="stylesheet" href="mobile_styles.css">
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="apple-touch-icon" href="favicon.png">
+    <link rel="icon" type="image/png" href="IMG_0253.PNG">
 </head>
 <body>
     <div id="butterfly-container">
@@ -38,7 +37,7 @@
         </script>
         <div class="container">
             <div id="home" class="textbox">
-                <h1>Ф</h1>
+                <h1><img src=favicon.png" width="200"</h1>
                 <h1>Fantasia Butterfly Co.</h1>
                 <h2>Cape Cod, MA</h2>
                 <h3>Making fantasies, reality.</h3>
