--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </script>
         <div class="container">
             <div id="home" class="textbox">
-                <h1><img src="favicon.png" width="200"></h1>
+                <h1><img src="favicon.png" width="225" height="225"></h1>
                 <h1>Fantasia Butterfly Co.</h1>
                 <h2>Cape Cod, MA</h2>
                 <h3>Making fantasies, reality.</h3>
