--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 </div>
                 <p>You can purchase butterflies from our Etsy page.</p>
                 <a href="https://www.etsy.com/shop/fantasiabutterfly" target="_blank" rel="noopener noreferrer" class="button">Visit Online Store</a>
+                <p>For special inquiries contact info@fantasiabutterfly.com</p>
             </div>
 
             <div id="gallery" class="textbox">
@@ -104,13 +105,13 @@
             <div id="FAQ" class="textbox">
                 <h1>FAQ</h1>
                 <p class="question">How do you source your butterflies?</p>
-                <p class="answer">We get our butterflies from overseas. Families farm them so none are taken from their environment.</p>
+                <p class="answer">We get our butterflies from overseas. Families farm them, none are taken from their environment.</p>
                 <p class="question">How are the butteflies euthanized?</p>
-                <p class="answer">They are frozen, which causes them to close, we rehydrate them and spread them, then they are air-dried.</p>
-                <p class="question">How long do they last?</p>
-                <p class="answer">They can last indefinitely, depending on how well you take care of them. For the longest life, keep away from humidity, drafts and direct sunglight.</p>
+                <p class="answer">They are frozen, which causes them to close. We rehydrate them, spread them and then they are air-dried.</p>
+                <p class="question">How long do they last?</p>\
+                <p class="answer">They can last indefinitely, depending on how well you take care of them. They are parishable, for the longest life keep away from humidity, drafts and direct sunglight.</p>
                 <p class="question">Do you accept returns?</p>
-                <p class="answer">If the parcel is damaged or lost during transit, we will resend a parcel or issue a refund. If the tracking shows delivered, we will not issue any refunds.</p>
+                <p class="answer">Read our policy section on Esty for complete information.</p>
             </div>
             <!-- Modal Structure -->
             <div id="imageModal" class="modal">
