--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                 <p class="answer">We get our butterflies from overseas. Families farm them, none are taken from their environment.</p>
                 <p class="question">How are the butteflies euthanized?</p>
                 <p class="answer">They are frozen, which causes them to close. We rehydrate them, spread them and then they are air-dried.</p>
-                <p class="question">How long do they last?</p>\
-                <p class="answer">They can last indefinitely, depending on how well you take care of them. They are parishable, for the longest life keep away from humidity, drafts and direct sunglight.</p>
+                <p class="question">How long do they last?</p>
+                <p class="answer">They can last indefinitely, but they are parishable. For the longest life keep away from humidity, drafts and direct sunglight.</p>
                 <p class="question">Do you accept returns?</p>
                 <p class="answer">Read our policy section on Esty for complete information.</p>
             </div>
