--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <p class="question">How long do they last?</p>
                 <p class="answer">They can last indefinitely, but they are parishable. For the longest life keep away from humidity, drafts and direct sunglight.</p>
                 <p class="question">Do you accept returns?</p>
-                <p class="answer">Read our policy section on Esty for complete information.</p>
+                <p class="answer">Read "General RBO Information" on Esty for complete information.</p>
             </div>
             <!-- Modal Structure -->
             <div id="imageModal" class="modal">
